# sequencercl

./: Cargo.toml  README.md
benches/: data1.txt  data2.txt  my_benchmark.rs
src/: main.rs  rabin_karp.rs
tests/: cli_tests.rs
