[package]
name = "sequencercl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
ocl = "0.19.7"


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.3"
criterion = { version = "0.5.1", features = ["html_reports"] }


[[bench]]
name = "my_benchmark"
harness = false
